--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,22 @@ jobs:
         distribution: oracle
         java-version: '17'
 
-    - name: PMD Code Analyzer Action
-      uses: billyan2018/setup-pmd@PMDAnalyzer1.0
+    - name: Install PMD
       run: |
-        pmd -d src/ -R rulesets/java/ruleset.xml -f xml -r pmd-report.xml
+        wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F6.38.0/pmd-bin-6.38.0.zip
+        unzip pmd-bin-6.38.0.zip
+        export PATH=$PATH:$PWD/pmd-bin-6.38.0/bin
+
+    - name: Run PMD Analysis
+      run: pmd -d src/ -R ruleses/java/ruleset.xml -f xml -r pmd-report.xml
+
+    - name: Upload PMD analysis report
+      uses: actions/upload-artifact@v2
+      with:
+        name: pmd-analysis-report
+        path: |
+          pmd-report.xml
+          pmd-test-report.xml
 
     - name: Parse PMD Report
       run: pmd-cpd-parse -r pmd-report.xml -f plain -d ', ' -e 10 -n 20 > pmd-violations.txt
