--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,22 +19,17 @@ jobs:
         distribution: oracle
         java-version: '17'
 
-    - name: Install PMD
-      run: |
-        wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F6.54.0/pmd-bin-6.54.0.zip
-        unzip pmd-bin-6.54.0.zip
-        export PATH=$PATH:$PWD/pmd-bin-6.54.0/bin
-
-    - name: Run PMD Analysis
-      run: run.sh pmd -d src/ -R ruleses/java/ruleset.xml -f xml -r pmd-report.xml
-
-    - name: Upload PMD analysis report
-      uses: actions/upload-artifact@v2
+    - uses: pmd/pmd-github-action@v1
+      id: pmd
       with:
-        name: pmd-analysis-report
-        path: |
-          pmd-report.xml
-          pmd-test-report.xml
+        version: '6.54.0'
+        sourcePath: 'src/main/java'
+        rulesets: 'rulesets/java/quickstart.xml,ruleset.xml'
+
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: pmd-report.sarif
 
     - name: Parse PMD Report
       run: pmd-cpd-parse -r pmd-report.xml -f plain -d ', ' -e 10 -n 20 > pmd-violations.txt
